--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/react-dom": "^18.2.1",
     "@types/react-redux": "^7.1.25",
     "jspdf-autotable": "^3.5.28",
+    "prime-react": "^1.0.0",
+    "primeicons": "^6.0.1",
     "primereact": "^9.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "ts-pdf": "^0.11.1",
     "typescript": "^4.9.5",
